--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "kriss/yii2-adminlte-iframe-mode",
+    "name": "amttgroup/yii2-adminlte-iframe-mode",
     "description": "Yii2 AdminLte Iframe Mode",
     "type": "yii2-extension",
     "keywords": ["yii2","extension","adminLTE"],
     "license": "MIT",
     "authors": [
         {
-            "name": "kriss",
-            "email": "462679766@qq.com"
+            "name": "amtt",
+            "email": "amttgroup@qq.com"
         }
     ],
     "require": {
@@ -17,7 +17,7 @@
     },
     "autoload": {
         "psr-4": {
-            "kriss\\iframeLayout\\": "src"
+            "amttgroup\\iframeLayout\\": "src"
         }
     }
 }
