--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=5.6",
         "yiisoft/yii2": "^2.0.6",
-        "dmstr/yii2-adminlte-asset": "^2.5"
+        "dmstr/yii2-adminlte-asset": "3.0.0-beta1"
     },
     "autoload": {
         "psr-4": {
